--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <%= @user.email %>
 </p>
 <p>
-  <strong>Micropost</strong>
+  <strong>Micropost:</strong>
   <% @user.microposts.each do |micropost| %>
     <%= micropost.content %>
   <% end %>
